// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should match snapshot 1`] = `
<scale-divider>
  <mock:shadow-root>
    <div aria-hidden="" class="divider">
      <hr>
    </div>
  </mock:shadow-root>
</scale-divider>
`;

exports[`Divider should match snapshot when horizontal false 1`] = `
<scale-divider vertical="true">
  <mock:shadow-root>
    <div aria-hidden="" class="divider divider--vertical">
      <span class="divider__vertical"></span>
    </div>
  </mock:shadow-root>
</scale-divider>
`;
